--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<slf4j.version>1.6.2</slf4j.version>
 		<spring.version>3.2.0.RELEASE</spring.version>
-		<spring.security.version>3.1.3.RELEASE</spring.security.version>
+        <spring.ldap.version>1.2</spring.ldap.version>
+        <spring.security.version>3.1.3.RELEASE</spring.security.version>
 		<tomcat.version>1.1</tomcat.version>
 		<skipTests>false</skipTests>
 		<testCompile>test-compile</testCompile>
@@ -238,8 +239,23 @@
 			<version>${spring.security.version}</version>
 			<scope>compile</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-ldap</artifactId>
+            <version>${spring.security.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.ldap</groupId>
+            <artifactId>spring-ldap</artifactId>
+            <version>${spring.ldap.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun</groupId>
+            <artifactId>ldapbp</artifactId>
+            <version>1.0</version>
+        </dependency>
 
-		<!-- Spring Data JPA -->
+        <!-- Spring Data JPA -->
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-jpa</artifactId>
