--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -24,7 +24,9 @@ log4j.logger.org.springframework.orm=ERROR
 log4j.logger.org.springframework.context=DEBUG
 log4j.logger.org.springframework.transaction=DEBUG
 log4j.logger.org.springframework.http=DEBUG
-log4j.logger.org.springframework.security=ERROR
+log4j.logger.org.springframework.security=INFO
+
+log4j.logger.org.springframework.security.ldap=DEBUG
 
 # Thymeleaf logger
 log4j.logger.org.thymeleaf=ERROR
