--- a/pom.xml
+++ b/pom.xml
@@ -424,6 +424,14 @@
             <version>4.9</version>
         </dependency>
 
+        <!-- templating -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 	<build>
 		<plugins>
