--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -30,7 +30,7 @@
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>
-            classpath*:META-INF/spring/spring-security*.xml
+            classpath*:META-INF/spring/spring-security.xml
             classpath*:META-INF/spring/applicationContext*.xml
         </param-value>
     </context-param>
